--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Save restricted content bot",
+    "name": "حفظ bot",
     "description": "Telegram bot to save restricted content.",
     "logo": "",
     "keywords": [
@@ -7,32 +7,32 @@
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/vasusen-code/SaveRestrictedContentBot",
+    "repository": "https://github.com/Gggegnd/iraqxsave",
     "website": "",
-    "success_url": "https://t.me/DroneBots",
+    "success_url": "https://t.me/JMTHON",
     "env": {
         "API_HASH": {
-            "description": "Your API HASH from my.telegram.org",
+            "description": "ايبي هاش عبر الرابط التالي my.telegram.org",
             "value": ""
         },
         "API_ID": {
-            "description": "Your API ID from my.telegram.org",
+            "description": "ايبي ايدي عبر الرابط التالي my.telegram.org",
             "value": ""
         },
         "BOT_TOKEN": {
-            "description": "Bot token, get it from @BotFather.",
+            "description": "توكن البوت عبر البوت الاتي : @BotFather.",
             "value": ""
         },
         "SESSION": {
-            "description": "Pyrogram string session.",
+            "description": "بايجرو سيشن.",
             "value": ""
         },
         "AUTH": {
-            "description": "User ID of Bot owner.",
+            "description": "ايديك.",
             "value": ""
         },
         "FORCESUB": {
-            "description": "Username name of public channel without using '@'.",
+            "description": "الاشتراك الاجباري'@'.",
             "value": ""
         }
     },
